--- a/nimbus/base/templates/table_chart.html
+++ b/nimbus/base/templates/table_chart.html
@@ -1,6 +1,6 @@
 <div style="width: {% if table.width %}{{table.width}}{% else %}100%{% endif %};">
     <h2>{{table.title}}</h2>
-    <div id="{{table.cid}}" charttype="{{table.type}}" class="jqplotchart" style="height:150px;">
+    <div id="{{table.cid}}" charttype="{{table.type}}" class="jqplotchart" style="height:{% if table.height %}{{table.height}}px{% else %}150px{% endif %};">
         {% for key, line in table.lines.items %}
         <chartdata>{{line|join:","}}</chartdata>
         {% endfor %}
