--- a/nimbus/procedures/templates/procedures_list.html
+++ b/nimbus/procedures/templates/procedures_list.html
@@ -63,6 +63,7 @@
                         <p>
                             Offsite ativado: <strong>{{procedure.offsite_on|yesno:"Sim,Não"}}</strong><br/>
                             Perfil de configuração: <strong>{{procedure.profile.name}}</strong><br/>
+                            Tempo de retenção dos arquivos: <strong>{{procedure.pool.retention_time}}</strong><br/>
                         </p>
                     </div>
                 </div>
