(refs #124) Os formularios foram criados atraves do modelo e usados nas funcoes de adicionar os objetos.

--- a/nimbus/media/lib/css/style.css
+++ b/nimbus/media/lib/css/style.css
@@ -644,6 +644,10 @@ a:hover {
 	vertical-align: middle;
 	}
 
+.block form.form_styled label {
+    display: block;
+    }
+
 .block form input.text,
 .block form input[type=password] {
 	width: 410px;
