--- a/nimbus/filesets/templates/base_filesets.html
+++ b/nimbus/filesets/templates/base_filesets.html
@@ -41,39 +41,43 @@
 	<div class="block_content">
 	    <script type="text/javascript" charset="utf-8">
             $(document).ready(function(){
-                    // $('#filepath_template').clone().appendTo('.filepaths').show();
-	                
-	                function remover_path(obj) {
-	                    $(obj).parent().remove();
-	                    if ($('#filepath_template').parent().children().length == 1) {
-	                        adicionar_path();
-	                    }
-	                }
-	                
-	                function adicionar_path(obj) {
-	                    if (obj) {
-	                        $('#filepath_template').clone().insertAfter($(obj).parent()).show();
-	                    } else {
-	                        $('#filepath_template').clone().appendTo('.filepaths').show();
-	                    }
-	                    
-	                    
-                        // $('.filepaths .add').unbind('click').click(function(){
-                        //     adicionar_path(this);
-                        // });
-    	                
-    	                $('.filepaths .del').unbind('click').click(function(){
-    	                    remover_path(this);
-    	                });
-	                }
-	                
-                    // $('.filepaths .add').click(function(){
+                // $('#filepath_template').clone().appendTo('.filepaths').show();
+            
+                function remover_path(obj) {
+                    $(obj).parent().remove();
+                    if ($('#filepath_template').parent().children().length == 1) {
+                        adicionar_path();
+                    }
+                }
+            
+                function adicionar_path(obj) {
+                    if (obj) {
+                        $('#filepath_template').clone().insertAfter($(obj).parent()).show();
+                    } else {
+                        $('#filepath_template').clone().appendTo('.filepaths').show();
+                    }
+                
+                
+                    // $('.filepaths .add').unbind('click').click(function(){
                     //     adicionar_path(this);
                     // });
-	                
-	                $('.filepaths .del').click(function(){
-	                    remover_path(this);
-	                });
+                
+                    $('.filepaths .del').unbind('click').click(function(){
+                        remover_path(this);
+                    });
+                }
+            
+                // $('.filepaths .add').click(function(){
+                //     adicionar_path(this);
+                // });
+            
+                $('.filepaths .del').click(function(){
+                    remover_path(this);
+                });
+            
+                $('#computer_id').change(function(){
+                    $('.tree > li ul').first().remove();
+                });
             });
         </script>
 
@@ -98,24 +102,17 @@
                 <li>{{ errors.path }}</li>
             </ul>
             {% endif %}
+            {% if fileset.files.count %}
             <p>
                 <label for="filepath_name">Caminhos para backup:</label><br/>
-                {% if fileset.files.count %}
                 <ul class="tree" style="padding-left: 20px !important; margin-bottom: 20px">
                     {% for p in fileset.files.all %}
                     <li class="" style="padding-left: 20px"><span style="padding-left: 10px"><input type="checkbox" name="path" value="{{p}}" checked="checked" />{{p}}</span></li>
                     {% endfor %}
                 </ul>
-                {% endif %}
             </p>
+            {% endif %}
             
-            <script type="text/javascript" charset="utf-8">
-                $(document).ready(function(){
-                    $('#computer_id').change(function(){
-                        $('.tree > li ul').first().remove();
-                    });
-                });
-            </script>
             {% if errors.computer_id %}
             <ul class="errorlist">
                 <li>{{ errors.computer_id }}</li>
@@ -133,7 +130,7 @@
             </p>
             <p></p>
             <p>
-                <input type="submit" class="submit mid" value="Atualizar" />
+                <input type="submit" class="submit mid" value="Salvar" />
             </p>
         </form>
 
