FIX: Apliquei a mascara de hora e minuto no formulario de agendamento de backup

--- a/nimbus/backup/templates/backup_create.html
+++ b/nimbus/backup/templates/backup_create.html
@@ -22,6 +22,7 @@
             update_tree($(this).attr("path"), get_tree_path, undefined, undefined, undefined, '#computer_id');
             return false;
         });
+		
     });
 </script>
 
@@ -285,13 +286,13 @@
                             <p>
                                 <label>Dias da semana:</label><br/>
                                 {% for day in weekdays %}
-                                <input type="checkbox" id="day_{{day}}" name="schedule.weekly.day" value="{{day}}"  {% if day in schedule_weekly_day %}checked="checked"{% endif %} />
+                                <input type="checkbox" id="day_{{day}}" name="schedule.weekly.day" class="mascara_hora" value="{{day}}"  {% if day in schedule_weekly_day %}checked="checked"{% endif %} />
                                 <label for="day_{{day}}">{{day|title}}</label>
                                 {% endfor %}
                             </p>
                             <p>
-                                <label for="mothly_hour">Hora:</label><br/>
-                                <input type="text" name="schedule.weekly.hour" id="mothly_hour" class="text small mascara_hora" style="width: 45px" maxlength="5" value="{{schedule_weekly_hour}}" /><br/>
+                                <label for="weekly_hour">Hora:</label><br/>
+                                <input type="text" name="schedule.weekly.hour" id="weekly_hour" class="text small mascara_hora" style="width: 45px" maxlength="5" value="{{schedule_weekly_hour}}" /><br/>
                                 <small>Exemplo: 10:20, 21:35 ou 07:08.</small>
                             </p>
                             <p>
@@ -311,8 +312,8 @@
                             </p>
                             <div class="personal_message"><p>Executa o backup todos os dias, sempre no horário especificado.</p></div>
                             <p>
-                                <label for="dayly_hour">Hora:</label><br/>
-                                <input type="text" name="schedule.dayly.hour" id="dayly_hour" class="text small mascara_hora" style="width: 45px" maxlength="5" value="{{schedule_dayly_hour}}" /><br/>
+                                <label for="daily_hour">Hora:</label><br/>
+                                <input type="text" name="schedule.dayly.hour" id="daily_hour" class="text small mascara_hora" style="width: 45px" maxlength="5" value="{{schedule_dayly_hour}}" /><br/>
                                 <small>Exemplo: 10:20, 21:35 ou 07:08.</small>
                             </p>
                             <p>
