Exibir duas casas decimais nos graficos

--- a/nimbus/base/templates/base.html
+++ b/nimbus/base/templates/base.html
@@ -50,6 +50,11 @@
                     pointLabels: { show: true },
                     fill: true
                 },
+				axesDefaults: {
+					tickOptions: {
+						formatString: "%.2f"
+					}
+				},
                 axes: {
                     xaxis: {
                         renderer: $.jqplot.CategoryAxisRenderer,
