--- a/nimbus/schedules/templates/base_schedules.html
+++ b/nimbus/schedules/templates/base_schedules.html
@@ -9,7 +9,7 @@
 			<div class="bheadr"></div>
 
 			<h2 style="font-size: 1.2em">
-			    Editar agendamento
+			    {{ title }}
 			</h2>
 		</div>		<!-- .block_head ends -->
 
