Modifiquei o seletor Jquery para pegar apenas o objeto select, evitando referenciar uma div.

--- a/nimbus/base/templates/base_wizard.html
+++ b/nimbus/base/templates/base_wizard.html
@@ -16,6 +16,9 @@
 		@import url("/media/lib/css/date_input.css");
 		@import url("/media/js/iphone-style-checkboxes/style.css");
 		@import url("/media/js/progressbar/jquery.ui.all.css");
+		
+		#id_country { width: 400px; }
+		#id_area { width: 300px; }
     </style>
 	
 	<!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=7" /><![endif]-->
