Voltando javascripts do create backup, eles foram apagados acidentalmente durante um merge.

--- a/nimbus/backup/templates/backup_create.html
+++ b/nimbus/backup/templates/backup_create.html
@@ -22,6 +22,74 @@
             update_tree($(this).attr("path"), get_tree_path, undefined, undefined, undefined, '#computer_id');
             return false;
         });
+        
+        $('.profile').change(function(){
+            if ($('.profile:checked').attr('id') == 'profile_0') {
+                $('.novo_perfil').slideDown();
+            } else {
+                $('.novo_perfil').slideUp();
+            }
+        });
+        $('.profile').change();
+        
+        $('#schedule_id').change(function(){
+            if ($('#schedule_id :selected').attr('id') == 'new_schedule') {
+                $('#schedule').slideDown();
+            } else {
+                $('#schedule').slideUp();
+            }
+        });
+        $('#schedule_id').change();
+        
+        $('.schedule_activate').change(function(){
+            _checked = $(this).attr('checked');
+            _class = $(this).attr('id');
+            if (_checked) {
+                $('.' + _class).addClass('active');
+            } else {
+                $('.' + _class).removeClass('active');
+            }
+        });
+        $('.schedule_activate').change();
+        
+        $('#fileset_id').change(function(){
+            if ($('#fileset_id :selected').attr('id') == 'new_fileset') {
+                $('#fileset').slideDown();
+            } else {
+                $('#fileset').slideUp();
+            }
+        });
+        $('#fileset_id').change();
+        $('#filepath_template').clone().appendTo('.filepaths').show();
+        
+        function remover_path(obj) {
+            $(obj).parent().remove();
+            if ($('#filepath_template').parent().children().length == 1) {
+                adicionar_path();
+            }
+        }
+        
+        function adicionar_path(obj) {
+            if (obj) {
+                $('#filepath_template').clone().insertAfter($(obj).parent()).show();
+            } else {
+                $('#filepath_template').clone().appendTo('.filepaths').show();
+            }
+            $('.filepaths .add').unbind('click').click(function(){
+                adicionar_path(this);
+            });
+            $('.filepaths .del').unbind('click').click(function(){
+                remover_path(this);
+            });
+        }
+        
+        $('.filepaths .add').click(function(){
+            adicionar_path(this);
+        });
+        
+        $('.filepaths .del').click(function(){
+            remover_path(this);
+        });
     });
 </script>
 
