--- a/nimbus/computers/templates/computers_list.html
+++ b/nimbus/computers/templates/computers_list.html
@@ -19,8 +19,11 @@
     }
 	
 	#computers-filter {
-		margin: 10px 0;
+		margin: 0 0 15px;
+		float: right;
 	}
+	
+	#computers { clear: both; }
 </style>
 {% endblock %}
 
@@ -35,7 +38,7 @@
 	</div>		<!-- .block_head ends -->
 
     <div class="block_content">
-        <p><a href="/computers/add">Adicionar computador</a></p>
+        <div class="left"><a href="/computers/add">Adicionar computador</a></div>
 		
 		<div id="computers-filter">
 			<form action="/computers/list" method="get">
@@ -50,7 +53,7 @@
 			</form>
 		</div>
 		
-        <div class="computers">
+        <div id="computers">
         {% for comp in computers %}
             {% ifchanged comp.groups.all %}
             <h2>{% for g in comp.groups.all %}{{ g.name }}{% if not forloop.last %}, {% endif %}{% endfor %}</h2>
