Criei um favicon.

--- a/nimbus/base/templates/base.html
+++ b/nimbus/base/templates/base.html
@@ -23,8 +23,10 @@
 	<!--[if lt IE 8]><style type="text/css" media="all">@import url("/media/lib/css/ie.css");</style><![endif]-->
 	<!--[if IE]><script type="text/javascript" src="/media/lib/js/excanvas.js"></script><![endif]-->
 	
+	<link rel="icon" type="image/x-icon" href="/media/images/favicon.ico" />
+	<link rel="shortcut icon" type="image/x-icon" href="/media/images/favicon.ico" />
+
 	<script type="text/javascript" src="/media/lib/js/jquery.js"></script>
-    
     <script type="text/javascript" src="/media/lib/js/jquery.jqplot.js"></script>
 	<script language="javascript" type="text/javascript" src="/media/lib/js/jqplotplugins/jqplot.barRenderer.js"></script>
     <script language="javascript" type="text/javascript" src="/media/lib/js/jqplotplugins/jqplot.pieRenderer.js"></script>
