Removi o javascript do template de edicao de configs do offsite para um arquivo js.

--- a/nimbus/offsite/templates/offsite_edit.html
+++ b/nimbus/offsite/templates/offsite_edit.html
@@ -1,32 +1,7 @@
 {% extends "base.html" %}
 
 {% block headtags %}
-<script type="text/javascript" charset="utf-8">
-    $(document).ready(function(){
-        $('#offsite_form #id_active').change(function(){
-            input_active = $('#offsite_form #id_active');
-            ps = input_active.parents().filter('p').siblings().filter(':not(p:last)');
-            if (input_active.attr('checked')) {
-                ps.slideDown();
-            } else {
-                ps.slideUp();
-            }
-        }).change();
-		
-		$("#offsite_form #id_active_upload_rate").change(function(){
-			var ps = $("#id_upload_rate");
-			if( $("#id_active_upload_rate").attr('checked')){
-				ps.slideDown("fast");
-				ps.val(200);
-			} else {
-				ps.slideUp("fast");
-				ps.val(-1);
-			}
-		});
-		
-    });
-</script>
-
+<script type="text/javascript" src="/media/js/offsite.js"></script>
 {% endblock %}
 
 {% block content %}
