--- a/nimbus/base/templates/base.html
+++ b/nimbus/base/templates/base.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-
 <head>
-
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	
 	<title>{% block title %}{% endblock %} Nimbus</title>
+	
+	<link rel="icon" type="image/x-icon" href="/media/images/favicon.ico" />
+	<link rel="shortcut icon" type="image/x-icon" href="/media/images/favicon.ico" />
 	
     <style type="text/css" media="all">
 		@import url("/media/lib/css/style.css");
@@ -16,79 +17,15 @@
 		@import url("/media/lib/css/date_input.css");
 		@import url("/media/js/iphone-style-checkboxes/style.css");
 		@import url("/media/js/progressbar/jquery.ui.all.css");
-		@import url("/media/lib/css/jquery.jqplot.css");
     </style>
 	
 	<!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=7" /><![endif]-->
 	<!--[if lt IE 8]><style type="text/css" media="all">@import url("/media/lib/css/ie.css");</style><![endif]-->
 	<!--[if IE]><script type="text/javascript" src="/media/lib/js/excanvas.js"></script><![endif]-->
 	
-	<link rel="icon" type="image/x-icon" href="/media/images/favicon.ico" />
-	<link rel="shortcut icon" type="image/x-icon" href="/media/images/favicon.ico" />
-
 	<script type="text/javascript" src="/media/lib/js/jquery.js"></script>
-    <script type="text/javascript" src="/media/lib/js/jquery.jqplot.js"></script>
-	<script language="javascript" type="text/javascript" src="/media/lib/js/jqplotplugins/jqplot.barRenderer.js"></script>
-    <script language="javascript" type="text/javascript" src="/media/lib/js/jqplotplugins/jqplot.pieRenderer.js"></script>
-    <script language="javascript" type="text/javascript" src="/media/lib/js/jqplotplugins/jqplot.categoryAxisRenderer.js"></script>
-    <script language="javascript" type="text/javascript" src="/media/lib/js/jqplotplugins/jqplot.highlighter.js"></script>
-    <script language="javascript" type="text/javascript" src="/media/lib/js/jqplotplugins/jqplot.pointLabels.js"></script>
     
-    <script type="text/javascript" charset="utf-8">
-        function create_chart(obj_id, data, ticks, chart_type) {
-            var fill = false;
-            var render = $.jqplot.PieRenderer;
-            
-            if (chart_type == 'bar') {
-                var render = $.jqplot.BarRenderer;
-            } else if (chart_type == 'area') {
-                var render = $.jqplot.LineRenderer;
-                var fill = true;
-            }
-			
-			$.jqplot(obj_id, [data], {
-                seriesDefaults: {
-                    renderer: render,
-                    pointLabels: { location:'s', show: true },
-                    fill: true,
-					color: '#95BACB'
-                },
-				axesDefaults: {
-					tickOptions: {
-						formatString: "%.2f"
-					}
-				},
-                axes: {
-                    xaxis: {
-                        renderer: $.jqplot.CategoryAxisRenderer,
-                        ticks: ticks,
-						min: 0
-                    },
-                    yaxis: {
-                        min: 0
-                    }
-                },
-                highlighter: { show: false }
-            });
-        };
-        
-        $(document).ready(function(){
-            $('.jqplotchart').each(function(){
-                var chart_id = $(this).attr('id');
-				var data = $(this).children().filter('chartdata').text().split(',');
-                data = $.map(data, function(e){
-                    return parseFloat(e);
-                });
-                var header = $(this).children().filter('chartheader').text().split(',');
-                var chart_type = $(this).attr('charttype');
-                $(this).text('');
-                
-                create_chart(chart_id, data, header, chart_type);
-            });
-        });
-    </script>
-	
-	<!--<script type="text/javascript" src="/media/lib/js/jquery.img.preload.js"></script>-->
+    <!--<script type="text/javascript" src="/media/lib/js/jquery.img.preload.js"></script>-->
 	<script type="text/javascript" src="/media/lib/js/jquery.filestyle.mini.js"></script>
 	<script type="text/javascript" src="/media/lib/js/jquery.wysiwyg.js"></script>
 	<script type="text/javascript" src="/media/lib/js/jquery.date_input.pack.js"></script>
@@ -97,14 +34,13 @@
 	<script type="text/javascript" src="/media/lib/js/jquery.select_skin.js"></script>
 	<script type="text/javascript" src="/media/lib/js/ajaxupload.js"></script>
 	<script type="text/javascript" src="/media/lib/js/jquery.pngfix.js"></script>
-	<script type="text/javascript" src="/media/lib/js/custom.js"></script>
 	<script type="text/javascript" src="/media/lib/js/jquery.filetree.js"></script>
 	<script type="text/javascript" src="/media/js/iphone-style-checkboxes/jquery/iphone-style-checkboxes.js"></script>
 	<!--<script src="/media/js/jquery.sparkline.min.js" type="text/javascript"></script>-->
-	<script src="/media/js/progressbar/jquery.ui.core.min.js" type="text/javascript" charset="utf-8"></script>
-	<script src="/media/js/progressbar/jquery.ui.widget.min.js" type="text/javascript" charset="utf-8"></script>	
-	<script src="/media/js/progressbar/jquery.ui.progressbar.min.js" type="text/javascript" charset="utf-8"></script>
-	<script src="/media/js/jquery.maskedinput-1.2.2.min.js" type="text/javascript" charset="utf-8"></script>
+	<script src="/media/js/progressbar/jquery.ui.core.min.js" type="text/javascript"></script>
+	<script src="/media/js/progressbar/jquery.ui.widget.min.js" type="text/javascript"></script>	
+	<script src="/media/js/progressbar/jquery.ui.progressbar.min.js" type="text/javascript"></script>
+	<script src="/media/js/jquery.maskedinput-1.2.2.min.js" type="text/javascript"></script>
 	
 	
 	<script type="text/javascript" charset="utf-8">
@@ -149,12 +85,9 @@
 	</script>
 	
 	{% block headtags %}{% endblock %}
-
+	
+	<script type="text/javascript" src="/media/lib/js/custom.js"></script>
 </head>
-
-
-
-
 
 <body>
 	
@@ -215,33 +148,6 @@
                             <li><a href="/timezone/config">Configuração de Hora</a></li>
                         </ul>
 					</li>
-					
-                    <!-- <li class="active"><a href="#">Computador</a>
-                        <ul>
-                            <li><a href="#">List pages</a></li>
-                            <li><a href="#">Add page</a></li>
-                            <li><a href="#">More actions</a>
-                                <ul>
-                                    <li><a href="#">Some action</a></li>
-                                    <li><a href="#">Some action</a></li>
-                                    <li><a href="#">Some action</a>
-                                        <ul>
-                                            <li><a href="#">Some action</a></li>
-                                            <li><a href="#">Some action</a></li>
-                                            <li><a href="#">Some action</a></li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </li>
-                    <li><a href="#">Media</a>
-                        <ul>
-                            <li><a href="#">List media</a></li>
-                            <li><a href="#">Add media</a></li>
-                            <li><a href="#">Something else</a></li>
-                        </ul>
-                    </li> -->
 				</ul>
 				
 				<!-- <p class="user">Olá, <a href="#">Administrador</a> | <a href="index.html">Sair do sistema</a></p> -->
@@ -255,7 +161,6 @@
 			
             {% if messages %}
                 {% for msg in messages %}
-                    <!-- TODO: Criar tipos de mensagens: errormsg, success, info, warning -->
                     <div class="message {{ msg.tags }}">
                         <p>{{ msg }}</p>
                     </div>
@@ -267,7 +172,6 @@
 
             {%block page%}
             {%endblock%}
-
 
 			<div id="footer">
 
