--- a/nimbus/computers/templates/computers_view.html
+++ b/nimbus/computers/templates/computers_view.html
@@ -1,15 +1,8 @@
 {% extends "base.html" %}
 
 {% block headtags %}
-<script type="text/javascript" charset="utf-8">
-    $(document).ready(function(){
-        $('.toggle').click(function(){
-            var target = $(this).attr('ref');
-            $(this).parent().parent().find('.' + target).slideToggle();
-            return false;
-        });
-    });
-</script>
+<link rel="stylesheet" type="text/css" href="/media/css/computers.css" />
+<script type="text/javascript" src="/media/js/computers.js"></script>
 {% endblock %}
 
 {% block page %}
@@ -25,48 +18,49 @@
     <div class="block_content">
         <p><a href="/computers/add">Adicionar computador</a> • <a href="/computers/">Visualizar todos os computadores</a></p>
 
-        <div class="computer {% if not computer.active %}desativado{% endif %}" style="padding: 20px; -moz-border-radius: 5px; background: #EEE; margin-bottom: 20px">
-            <div class="left" style="float: left; width: 250px">
+        <div class="computer {% if not computer.active %}desativado{% endif %}">
+            <div class="left">
                 <div class="title">
-                    <img src="/media/icons/computer.png" style="float: left; height: 32px; padding-right: 10px" />
-                    <h3 class="name" style="margin: 0 0 -5px 0; padding: 0"><a href="/computers/{{ computer.id }}/view">{{computer.name}}</a></h3>
+                    <img src="/media/icons/computer.png" alt=""/>
+                    <h3 class="name"><a href="/computers/{{ computer.id }}/view">{{computer.name}}</a></h3>
                     <small class="ip">{{computer.address}} - {{computer.operation_system|title}} - {% for g in computer.groups.all %}{{g.name}}{% endfor %}</small>
                 </div>
-                <p style="font-size: 10px; margin-top: 10px; line-height: 1.4em">{{computer.description}}</p>
-                <p style="font-size: 10px; margin: 0px; padding: 0; line-height: 1.4em"><a href="/computers/{{computer.id}}/edit/">Editar</a> - <a href="/computers/{{computer.id}}/delete/">Remover</a></p>
+                <p class="description">{{computer.description}}</p>
+                <p class="options"><a href="/computers/{{computer.id}}/edit/">Editar</a> -
+				<a href="/computers/{{computer.id}}/delete/">Remover</a></p>
             </div>
-            <div class="right" style="float: right; width: 600px">
-                <div style="float: right">
+            <div class="right">
+                <div class="floatright">
                     {% if not computer.active %}
-                    <form action="/computers/{{computer.id}}/activate/" method="post" style="float: right">
-                        <input type="submit" class="submit tiny" value="Ativar" style="float: right; font-size: 11px; margin-right: 0; margin-left: 5px;" />
+                    <form action="/computers/{{computer.id}}/activate/" method="post" class="floatright">
+                        <input type="submit" class="submit tiny" value="Ativar"/>
                     </form>
                     {% endif %}
                     {% if computer.procedure_set.count %}
-                    <form action="/restore/{{computer.id}}/view/" method="post" style="float: right">
-                        <input type="submit" class="submit tiny" value="Restaurar" style="float: right; font-size: 11px; margin-right: 0; margin-left: 5px;" />
+                    <form action="/restore/{{computer.id}}/view/" method="post" class="floatright">
+                        <input type="submit" class="submit tiny" value="Restaurar" />
                     </form>
                     {% endif %}
-                    <form action="/backup/{{computer.id}}/add/" method="post" style="float: right">
-                        <input type="submit" class="submit tiny" value="Criar backup" style="float: right; font-size: 11px; margin-right: 0; margin-left: 5px;" />
+                    <form action="/backup/{{computer.id}}/add/" method="post" class="floatright">
+                        <input type="submit" class="submit tiny" value="Criar backup"/>
                     </form>
                 </div>
                 {% if not computer.procedure_set.count %}
                     <p>Não existem procedimentos para este computador.</p>
                 {% else %}
-                    <h4 style="float: left">ARQUIVOS PARA BACKUP</h4>
+                    <h4 class="floatleft">ARQUIVOS PARA BACKUP</h4>
                     <div class="clear"></div>
-                    <div class="files" style="padding: 10px; -moz-border-radius: 5px; background: #FFF; margin-bottom: 20px; border: 1px solid #CCC">
+                    <div class="files">
                         {% for proc in computer.procedure_set.all %}
                         <div class="file">
                             <div class="title">
                                 <a href="#" class="toggle" ref="fileset_detail">
-                                    <img src="/media/icons/folder.png" style="float: left; height: 32px; padding-right: 10px" />
-                                    <h4 class="name" style="margin: 0 0 -5px 0; padding: 0">{{proc.profile.fileset}}</h4>
+                                    <img src="/media/icons/folder.png"/>
+                                    <h4 class="name">{{proc.profile.fileset}}</h4>
                                     <small class="ip">{% for file in proc.profile.fileset.files.all|slice:":3" %}{{file.path}} - {% endfor %}</small>
                                 </a>
                             </div>
-                            <div class="fileset_detail" style="display: none">
+                            <div class="fileset_detail">
                                 <br/>
                                 Offsite ativado? <strong>{% if proc.offsite_on %}Sim{% else %}Não{% endif %}</strong><br/>
                                 Perfil de configuração: <strong>{{proc.profile.name}}</strong> <small>(<a href="{% url nimbus.procedures.views.profile_edit object_id=proc.profile.id %}">editar</a>)</small><br/>
