Organizando Javascript da app timezone

--- a/nimbus/timezone/templates/timezoneconf.html
+++ b/nimbus/timezone/templates/timezoneconf.html
@@ -1,35 +1,7 @@
 {% extends "base.html" %}
 
 {% block headtags %}
-<script type="text/javascript">
-
-    $(document).ready(function() {
-        $("select#id_country").bind("change", getAreaChoices);
-    });
- 
-    function getAreaChoices() {
-        $.ajax({
-            type: "POST",
-            url: "{% url nimbus.timezone.views.area_request %}",
-            dataType: "json",
-            data: {country: $('[name=country]').val()},
-            success: function(data, textStatus){
-                $("select#id_area").empty();
-                $.each(data, function(i, item){
-                    $("select#id_area").append(
-                        '<option value="'+item+'" selected="selected">'+item+'</option>'
-                    );
-                });
-                $("select#id_area").change();
-            },
-            error: function (XMLHttpRequest, textStatus, errorThrown) {
-                alert("Status: "+textStatus+".");
-                this; // the options for this ajax request
-            }
-        });
-    }
-
-</script>
+<script type="text/javascript" src="/media/js/timezone.js"></script>
 {% endblock %}
 
 
@@ -47,6 +19,7 @@
     
         <form method="post" action="">
             {% include "form.html" %}
+			<input type="hidden" value="{% url nimbus.timezone.views.area_request %}" id="area_request" name="area"/>
             <p><input type="submit" class="submit" value="Confirm" /></p>
         </form>
     
